--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -11,18 +11,15 @@ jobs:
       contents: read
       pull-requests: write # Necessário para comentar no PR
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
       - name: AI Reviewer
-        uses: anc95/ChatGPT-CodeReview@main # Action que orquestra a revisão
+        uses: sshaidm/gemini-code-review-action@v1 # Action que orquestra a revisão
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          OPENAI_API_KEY: ${{ secrets.AI_API_KEY }} # Funciona com Gemini via proxy ou OpenAI nativo
+          GEMINI_API_KEY: ${{ secrets.AI_API_KEY }}
+        with:
           LANGUAGE: Portuguese
-          MODEL: gpt-4o # Ajuste para o modelo configurado
+          MODEL: gemini-2.5-flash # Ajuste para o modelo configurado
+          GEMINI-KEY: ${{ secrets.AI_API_KEY }}
+          GITHUB-TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PROMPT: |
             Aja como um Engenheiro de Segurança Sênior (DevSecOps). 
             Analise o DIFF deste Pull Request buscando:
