--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -12,7 +12,7 @@ jobs:
       pull-requests: write # Necessário para comentar no PR
     steps:
       - name: AI Reviewer
-        uses: sshaidm/gemini-code-review-action@v1 # Action que orquestra a revisão
+        uses: sshaidm/gemini-code-review-action@main # Action que orquestra a revisão
         env:
           GEMINI_API_KEY: ${{ secrets.AI_API_KEY }}
         with:
