--- a/.github/workflows/ai-review.yml
+++ b/.github/workflows/ai-review.yml
@@ -1,32 +1,51 @@
-name: AI Code Review
+name: "Code Review by Gemini AI"
 
 on:
   pull_request:
-    types: [opened, synchronize]
 
 jobs:
   review:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      pull-requests: write # Necessário para comentar no PR
+      pull-requests: write
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v4
-
-      - name: AI Reviewer
-        uses: sshnaidm/gemini-code-review-action@main # Action que orquestra a revisão
+      - uses: actions/checkout@v4
+      - name: "Get diff of the pull request"
+        id: get_diff
+        shell: bash
         env:
-          GEMINI_API_KEY: ${{ secrets.AI_API_KEY }}
+          PULL_REQUEST_HEAD_REF: "${{ github.event.pull_request.head.ref }}"
+          PULL_REQUEST_BASE_REF: "${{ github.event.pull_request.base.ref }}"
+        run: |-
+          git fetch origin "${{ env.PULL_REQUEST_HEAD_REF }}"
+          git fetch origin "${{ env.PULL_REQUEST_BASE_REF }}"
+          git checkout "${{ env.PULL_REQUEST_HEAD_REF }}"
+          git diff "origin/${{ env.PULL_REQUEST_BASE_REF }}" > "diff.txt"
+          {
+            echo "pull_request_diff<<EOF";
+            cat "diff.txt";
+            echo 'EOF';
+          } >> $GITHUB_OUTPUT
+      - uses: rubensflinco/gemini-code-review-action@1.0.5
+        name: "Code Review by Gemini AI"
+        id: review
         with:
-          language: Portuguese
-          model: gemini-2.5-flash # Ajuste para o modelo configurado
-          gemini-key: ${{ secrets.AI_API_KEY }}
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          prompt: |
+          gemini_api_key: ${{ secrets.AI_API_KEY }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_repository: ${{ github.repository }}
+          github_pull_request_number: ${{ github.event.pull_request.number }}
+          git_commit_hash: ${{ github.event.pull_request.head.sha }}
+          model: "gemini-2.5-flash"
+          pull_request_diff: |-
+            ${{ steps.get_diff.outputs.pull_request_diff }}
+          pull_request_chunk_size: "3500"
+          extra_prompt: |-
             Aja como um Engenheiro de Segurança Sênior (DevSecOps). 
             Analise o DIFF deste Pull Request buscando:
             1. Vulnerabilidades OWASP Top 10 (especialmente SQL Injection e Insecure Deserialization).
             2. Code Smells e complexidade ciclomática desnecessária.
             3. Aderência às melhores práticas de Java 25 e Spring Boot 3.4.
             4. Responda com comentários técnicos e construtivos diretamente nas linhas do código afetado.
+            5. Sempre responda em português brasileiro!
+          log_level: "DEBUG"
